--- a/CNN.rmd
+++ b/CNN.rmd
@@ -46,9 +46,29 @@ image(rotate(sample_7), col = grey.colors(255))
 ## Red neuronal sencilla
 
 ```{r}
-simple_nnet <- multinom(label ~ ., data=train, MaxNWts=10000, decay=5e-3, maxit=100)
+simple_nnet <- multinom(label ~ ., data=data_train, MaxNWts=10000, decay=5e-3, maxit=100)
 ```
 ```{r}
-prediction_simple_nnet <- predict(simple_nnet, test, type = "class")
+prediction_simple_nnet <- predict(simple_nnet, data_test, type = "class")
+prediction_simple_nnet[1:4]
+data_test$label[1:4]
+
+confussion_matrix <- table(data_test$label, prediction_simple_nnet)
+confussion_matrix
+```
+```{r}
+accuracy_simple_nnet <- mean(prediction_simple_nnet == data_test$label)
+accuracy_simple_nnet
+
+# Obtenemos un accuracy cercano al 90% no está mal pero vamos a intentar mejorarlo
+```
+
+## Deep Neural Network
+
+Instalación de paquetes
+
+```{r}
+require(mxnet)
+library(mxnet)
 ```
 
