--- a/RF.Rmd
+++ b/RF.Rmd
@@ -33,20 +33,15 @@ data_train <- data[train_index,]
 data_test <- data[-train_index,]
 ```
 
-## Funciones de ayuda
-
-```{r}
-rotate <- function(x) t(apply(x, 2, rev))
-```
-
-```{r}
-sample_4 <- matrix(as.numeric(data[4,-1]), nrow = 28, byrow = TRUE)
-sample_7 <- matrix(as.numeric(data[7,-1]), nrow = 28, byrow = TRUE)
-image(rotate(sample_4), col = grey.colors(255))
-image(rotate(sample_7), col = grey.colors(255))
-```
-
 ## Random Forest
+
+El segundo algoritmo que vamos a utilizar es el de Random Forest, que consiste en construir múltiples árboles de decisión durante el entrenamiento y combinar sus resultados para obtener predicciones más precisas.
+
+Para ello, vamos a utilizar la librería **ranger**, que es una versión optimizada de **randomForest**, con los siguientes parámetros:
+
+-   *num.trees=50*: El número de árboles que hemos indicado es 50, pues al incrementar este valor el tiempo de ejecución crece significativamente, mientras que el accuracity se muestra prácticamente invariable.
+
+-   *importance="impurity"*: este parámetro se utiliza para indicar si se deben calcular las importancias de las variables. Su valor por defecto es "none". Sin embargo, para nuestro modelo le hemos indicado que calcule la importancia de las variables basándose en la medida de impureza de Gini o ganancia de varianza.
 
 ```{r}
 rf <- ranger(label~., data=data_train, num.trees=50, importance="impurity")
@@ -63,5 +58,5 @@ confussion_matrix_rf
 
 ```{r}
 accuracy_rf <- mean(prediction_rf$predictions == data_test$label)
-accuracy_rf # 0.96
+cat("Accuracy with random forest:", accuracy_rf) # 0.96
 ```
