--- a/CNN.rmd
+++ b/CNN.rmd
@@ -11,7 +11,7 @@ data <- read.csv("train.csv")
 test_df <- read.csv("test.csv")
 
 data$label <- as.factor(data$label)
-summary(data$label)
+summary(data$label) #Cantidad de imagenes por categoria
 
 dim(train)
 View(test)
@@ -68,7 +68,69 @@ accuracy_simple_nnet
 Instalación de paquetes
 
 ```{r}
-require(mxnet)
-library(mxnet)
+# Data wrangling
+library(tidyverse)
+
+# Image manipulation
+library(imager)
+
+# Deep learning
+library(keras)
+
+# Model Evaluation
+library(caret)
+
+# use conda env
+#use_condaenv("r-tensorflow")
+
+options(scipen = 999)
+```
+
+```{r}
+devtools::install_github("rstudio/tensorflow")
+library(tensorflow)
+install_tensorflow()
+```
+
+
+```{r}
+
+library(keras)
+install_keras()
+
+model <- keras_model_sequential(name = "simple_model") %>% 
+  
+  # Convolution Layer
+  layer_conv_2d(filters = 32,
+                kernel_size = c(3,3),
+                padding = "same",
+                activation = "relu",
+                input_shape = c(28,28, 1) 
+                ) %>% 
+  
+  layer_batch_normalization() %>%
+
+  # Max Pooling Layer
+  layer_max_pooling_2d(pool_size = c(2,2)) %>% 
+  
+  # Flattening Layer
+  layer_flatten() %>% 
+  
+  # Dense Layer
+  layer_dense(units = 128,
+              activation = "relu") %>% 
+  layer_dropout(rate = 0.5) %>%  # Add dropout layer
+  
+  # Dense Layer
+  layer_dense(units = 64,
+              activation = "relu") %>%
+  layer_dropout(rate = 0.5) %>%  # Add dropout layer
+  
+  # Output Layer
+  layer_dense(units = 10,
+              activation = "softmax",
+              name = "Output")
+  
+model
 ```
 
