--- a/Entrega.rmd
+++ b/Entrega.rmd
@@ -120,9 +120,9 @@ metric <- "Accuracy"
 #### C5.0
 
 ```{r}
-grid <- expand.grid(trials = c(1, 10, 20),
-                    model = c("tree", "rules"),
-                    winnow = c(TRUE, FALSE))
+grid <- expand.grid(trials = 20,
+                    model = "tree",
+                    winnow = FALSE)
 if (file.exists("boosting_c50.rds")) {
   model_c50 <- readRDS(file = "boosting_c50.rds")
 } else {
@@ -139,8 +139,8 @@ if (file.exists("boosting_c50.rds")) {
 #### AdaBoost.M1
 
 ```{r}
-grid <- expand.grid(mfinal = (1:3) * 3,
-                    maxdepth = c(1, 3),
+grid <- expand.grid(mfinal = 20,
+                    maxdepth = 5,
                     coeflearn = c("Breiman"))
 if (file.exists("boosting_adaboost.rds")) {
   model_adaboost <- readRDS(file = "boosting_adaboost.rds")
@@ -158,8 +158,8 @@ if (file.exists("boosting_adaboost.rds")) {
 #### Boosted Linear Model
 
 ```{r}
-grid <- expand.grid(mstop = 150,
-                    nu = 0.01)
+grid <- expand.grid(mstop = 20,
+                    nu = 0.001)
 if (file.exists("boosting_bstlm.rds")) {
   model_bstlm <- readRDS(file = "boosting_bstlm.rds")
 } else {
